fix(ConferenceStandings): fixed scrollbar appearing for large logos

--- a/app/components/modules/ConferenceStandings/ConferenceStandings.module.scss
+++ b/app/components/modules/ConferenceStandings/ConferenceStandings.module.scss
@@ -44,6 +44,7 @@
   gap: 16px;
   height: inherit;
   width: 200px;
+  overflow: hidden;
 
   @include s {
     width: 300px;
